--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 Revision history for Bencher-Scenario-Words2NumsModules
 
-0.001   2016-07-12 (PERLANCAR) (unreleased)
+0.001   2016-07-12 (PERLANCAR)
 
         - First release.
